crates/cli/tests/snapshots/tui_explore_view_test__explore_depth_adjusted.snap
---
source: crates/cli/tests/tui_explore_view_test.rs
assertion_line: 86
expression: output
---
Explore — test-project                                                          
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│URL: https://example.com                                                      │
│Depth: 7                                                                      │
│                                                                              │
│[+/-] Depth  [i] Edit URL  [Enter] Start  [Esc] Back                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[Esc] Back
