crates/cli/tests/snapshots/tui_explore_view_test__explore_idle_empty_url.snap
---
source: crates/cli/tests/tui_explore_view_test.rs
assertion_line: 51
expression: output
---
Explore — test-project                                                          
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│URL: <enter URL>                                                              │
│Depth: 3                                                                      │
│                                                                              │
│[+/-] Depth  [i] Edit URL  [Enter] Start  [Esc] Back                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[Esc] Back
