crates/cli/tests/snapshots/tui_explore_view_test__explore_input_mode.snap
---
source: crates/cli/tests/tui_explore_view_test.rs
assertion_line: 68
expression: output
---
Explore — test-project                                                          
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│URL: https://example.com_                                                     │
│Depth: 3                                                                      │
│                                                                              │
│[Type URL] [Enter] Confirm  [Esc] Cancel                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[Esc] Back
