crates/cli/tests/snapshots/tui_explore_view_test__explore_url_empty_input_mode.snap
---
source: crates/cli/tests/tui_explore_view_test.rs
assertion_line: 77
expression: output
---
Explore — test-project                                                          
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│URL: http_                                                                    │
│Depth: 3                                                                      │
│                                                                              │
│[Type URL] [Enter] Confirm  [Esc] Cancel                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[Esc] Back
