crates/cli/tests/snapshots/tui_explore_view_test__explore_with_url.snap
---
source: crates/cli/tests/tui_explore_view_test.rs
assertion_line: 59
expression: output
---
Explore — my-project                                                            
                                                                                
────────────────────────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────────────────────────┐
│URL: https://example.com                                                      │
│Depth: 3                                                                      │
│                                                                              │
│[+/-] Depth  [i] Edit URL  [Enter] Start  [Esc] Back                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
[Esc] Back
